fix: ships being 1 length too long feat: domLogic click to attack fix: update board displaying one length too much

--- a/src/style.css
+++ b/src/style.css
@@ -25,7 +25,13 @@ body {
 }
 
 .gridCell {
-  border: 1px solid white;
+  border: 1px solid grey;
+}
+
+.gridCell:hover {
+  transition: all 0.2s;
+  box-shadow: 0 0 7px 1px white;
+  cursor: pointer;
 }
 
 div.hit {
